--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -38,7 +38,7 @@
         display: none;
     }
 
-    body:not(:has(:target)) #lvi-students {
+    body:not(:has(:target)) #uvi-students {
         display: block;
     }
 
