--- a/main/templates/main/teacher.html
+++ b/main/templates/main/teacher.html
@@ -15,6 +15,7 @@
 			<p>Room: {{teacher.room}}</p>
             <p>Building: {{teacher.building}}</p>
 			<p>Total Bookings: {{total_bookings}}</p>
+			<a href="{% url 'change_pass_t' teacher.id %}">Change Pasword</a>
 
 		</div>
 	</div>
