--- a/main/templates/main/map.html
+++ b/main/templates/main/map.html
@@ -5,6 +5,6 @@
 
 
 <marquee behavior="alternate" direction=right scrollamount=50> <img src="{% static 'images/map.png' %}" alt="Map 1"> </marquee>
-<marquee behavior="alternate" scrollamount=20> <img src="{% static 'images/realMap.png' %}" alt="Map 2"> </marquee>
+<marquee behavior="alternate" scrollamount=20> <img src="{% static 'images/Parents evening map.png' %}" alt="Map 2"> </marquee>
 
 {% endblock %}
