--- a/main/templates/main/map.html
+++ b/main/templates/main/map.html
@@ -4,7 +4,6 @@
 {% block content %}
 
 
-<marquee behavior="alternate" direction=right scrollamount=50> <img src="{% static 'images/map.png' %}" alt="Map 1"> </marquee>
-<marquee behavior="alternate" scrollamount=20> <img src="{% static 'images/Parents evening map-1.png' %}" alt="Map 2"> </marquee>
+<img src="{% static 'images/Parents evening map-1.png' %}" alt="Map">
 
 {% endblock %}
