--- a/main/templates/main/map.html
+++ b/main/templates/main/map.html
@@ -4,6 +4,6 @@
 {% block content %}
 
 
-<img src="{% static 'images/Parents evening map-1.png' %}" alt="Map">
+<img src="{% static 'images/newMap.png' %}" alt="Map">
 
 {% endblock %}
