--- a/manual/templates/manual/manual.html
+++ b/manual/templates/manual/manual.html
@@ -17,7 +17,7 @@
 
 
                 <br> 
-                <input class="btn btn-sm btn-success" type="submit" name="Submit" {% if button_disabled %}disabled{% endif %}>
+                <input class="btn btn-sm btn-success" type="submit" name="Submit">
             </form>
 
             {% for message in messages %}
