--- a/manual/templates/manual/error.html
+++ b/manual/templates/manual/error.html
@@ -4,6 +4,6 @@
 <div style="text-align: center; margin-top: 50px;">
     <h1>Something Went Wrong</h1>
     <p>It seems there was an issue. Please refresh the page and try again.</p>
-    <a href="{% url 'manual' %}" class="btn btn-primary">Refresh</a>
+    <a href="{% url 'dashboard' %}" class="btn btn-primary">Refresh</a>
 </div>
 {% endblock %}
