--- a/manual/templates/manual/error.html
+++ b/manual/templates/manual/error.html
@@ -4,6 +4,11 @@
 <div style="text-align: center; margin-top: 50px;">
     <h1>Something Went Wrong</h1>
     <p>It seems there was an issue. Please refresh the page and try again.</p>
-    <a href="{% url 'dashboard' %}" class="btn btn-primary">Refresh</a>
+    
+    {% if previous_page %}
+        <a href="{{ previous_page }}" class="btn btn-primary">Go Back</a>
+    {% else %}
+        <a href="{% url 'manualType' %}" class="btn btn-primary">Go Back</a>
+    {% endif %}
 </div>
 {% endblock %}
