try except on crud

--- a/manual/templates/manual/error.html
+++ b/manual/templates/manual/error.html
@@ -8,7 +8,7 @@
     {% if previous_page %}
         <a href="{{ previous_page }}" class="btn btn-primary">Go Back</a>
     {% else %}
-        <a href="{% url 'dashboard' %}" class="btn btn-primary">Go Back</a>
+        <a href="{% url 'dashboard' %}" class="btn btn-primary">Refresh</a>
     {% endif %}
 </div>
 {% endblock %}
