--- a/auto/templates/auto/auto.html
+++ b/auto/templates/auto/auto.html
@@ -50,6 +50,7 @@ function openLoader() {
     submitButton.disabled = true;
     submitButton.value = "Processing...";
     submitButton.classList.add("spinner-grow", "spinner-grow-sm");
+    submitButton.style = "color; black";
 }
 </script>
 {% endblock %}
