teach not taech

--- a/main/templates/main/subject.html
+++ b/main/templates/main/subject.html
@@ -16,7 +16,7 @@
 	</div>
 
     <div class="col-md">
-		<h5>TEACHERS THAT TAECH SUBJECT:</h5>
+		<h5>TEACHERS THAT TEACH SUBJECT:</h5>
         <hr>
         <div class="card card-body" style="height: 300px; overflow-y: auto;">
 
