--- a/users/templates/users/userStudentBookings.html
+++ b/users/templates/users/userStudentBookings.html
@@ -9,6 +9,9 @@
 		<div class="card card-body">
 			<h5>Bookings</h5>
 		</div>
+		<a href="{% url 'bookings_pdf_students' %}" target="_blank" class="btn btn-primary" style="position: absolute; top: 10px; right: 10px;">
+			Save Bookings as PDF
+		</a>
 		<div class="card card-body" style="height: 500px; overflow-y: auto;">
 			<table class="table table-sm">
 				<tr>
