--- a/auto/templates/auto/auto.html
+++ b/auto/templates/auto/auto.html
@@ -14,6 +14,10 @@
                 {% csrf_token %}
 
                 <h5>{{no}}</h5>
+                <h5>{{first_time}}</h5>
+                <h5>{{second_time}}</h5>
+                <h5>{{third_time}}</h5>
+                <h5>{{fourth_time}}</h5>
                 
                 <h5>Start Time:</h5>
                 <select id="start_time" name="start_time" class="form-control">
