--- a/users/templates/users/userParent.html
+++ b/users/templates/users/userParent.html
@@ -8,7 +8,7 @@
 		<h5>PARENT INFO:</h5>
         <hr>
 		<div class="card card-body">
-			<h5>Student: {{parent.name}}</h5>
+			<h5>Parent: {{parent.name}}</h5>
 			<hr>
 			<p>Email: {{parent.email}}</p>
 
@@ -35,7 +35,7 @@
                 <input type="password" name="password" placeholder="Password..." class="form-control my-2" style="width: 100%;">
             
                 <br>
-                <input class="btn btn-sm btn-success" type="submit" name="Submit">
+                <input class="btn btn-sm btn-success" type="submit" name="Login as Student">
 
                     
 
