see passwords and load students

--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -87,6 +87,7 @@
             <a class="btn btn-primary btn-sm btn-block" href="{% url 'registerStudent' %}">Create Student</a>
 
             <a class="btn btn-primary btn-sm btn-success" href="{% url 'convert_all_lvi' %}" style="margin-top: 10px;">Convert All LVI Students</a>
+            <a class="btn btn-primary btn-sm btn-block" href="{% url 'loadLVI' %}" style="margin-top: 10px;">Load LVI Students</a>
             <table class="table table-sm">
                 <tr>
                     
