delete all teachers

--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -161,6 +161,7 @@
         <div class="card card-body" style="height: 500px; overflow-y: auto;">
             <a class="btn btn-primary btn-sm btn-block" href="{% url 'registerTeacher' %}">Create Teacher</a>
             <a class="btn btn-primary btn-sm btn-block" href="{% url 'loadTeachers' %}" style="margin-top: 10px;">Load Teachers</a>
+            <a class="btn btn-primary btn-sm btn-danger" href="{% url 'delete_all_teachers' %}" style="margin-top: 10px;">Delete All Teachers</a>
             <table class="table table-sm">
                 <tr>
                     
