--- a/main/templates/main/emailStudent.html
+++ b/main/templates/main/emailStudent.html
@@ -8,7 +8,7 @@
     <div class="col-md-6">
         <div class="card card-body">
 
-            <p>Are you sure you want to delete all teachers ?</p>
+            <p>Do you want to email {{student}} their username and password?</p>
 
             <form action="" method="POST">
                 {% csrf_token %}
