email all students

--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -88,6 +88,9 @@
 
             <a class="btn btn-primary btn-sm btn-success" href="{% url 'convert_all_lvi' %}" style="margin-top: 10px;">Convert All LVI Students</a>
             <a class="btn btn-primary btn-sm btn-block" href="{% url 'loadLVI' %}" style="margin-top: 10px;">Load LVI Students</a>
+            
+            <a class="btn btn-primary btn-sm btn-block" href="{% url 'emailAllStudents' %}" style="margin-top: 10px;">Email All Students</a>
+
             <table class="table table-sm">
                 <tr>
                     
