email all teachers

--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -165,6 +165,7 @@
             <a class="btn btn-primary btn-sm btn-block" href="{% url 'registerTeacher' %}">Create Teacher</a>
             <a class="btn btn-primary btn-sm btn-block" href="{% url 'loadTeachers' %}" style="margin-top: 10px;">Load Teachers</a>
             <a class="btn btn-primary btn-sm btn-danger" href="{% url 'delete_all_teachers' %}" style="margin-top: 10px;">Delete All Teachers</a>
+            <a class="btn btn-primary btn-sm btn-block" href="{% url 'emailAllTeachers' %}" style="margin-top: 10px;">Email All Teachers</a>
             <table class="table table-sm">
                 <tr>
                     
