print all LVI bookings

--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -90,6 +90,7 @@
             <a class="btn btn-primary btn-sm btn-block" href="{% url 'loadLVI' %}" style="margin-top: 10px;">Load LVI Students</a>
             
             <a class="btn btn-primary btn-sm btn-block" href="{% url 'emailAllStudents' %}" style="margin-top: 10px;">Email All Students</a>
+            <a class="btn btn-primary btn-sm btn-block" href="{% url 'printStudentBookings' %}" style="margin-top: 10px;">Print Student Bookings</a>
 
             <table class="table table-sm">
                 <tr>
